# app-suite

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: app.py  pyproject.toml
app/pages/: background_remover.py  image_converter.py
utils/: image_utils.py  nav.py
